src/guestfs-actions.h

extern int guestfs_upload (guestfs_h *handle, const char *filename, const char *remotefilename);
extern int guestfs_download (guestfs_h *handle, const char *remotefilename, const char *filename);
extern int guestfs_tar_in (guestfs_h *handle, const char *tarfile, const char *directory);
extern int guestfs_tar_out (guestfs_h *handle, const char *directory, const char *tarfile);
extern int guestfs_tgz_in (guestfs_h *handle, const char *tarball, const char *directory);
extern int guestfs_tgz_out (guestfs_h *handle, const char *directory, const char *tarball);
extern int guestfs_mount_ro (guestfs_h *handle, const char *device, const char *mountpoint);
extern int guestfs_mount_options (guestfs_h *handle, const char *options, const char *device, const char *mountpoint);
extern int guestfs_mount_vfs (guestfs_h *handle, const char *options, const char *vfstype, const char *device, const char *mountpoint);
extern int guestfs_lvremove (guestfs_h *handle, const char *device);
extern int guestfs_vgremove (guestfs_h *handle, const char *vgname);
extern int guestfs_pvremove (guestfs_h *handle, const char *device);
extern int guestfs_set_e2label (guestfs_h *handle, const char *device, const char *label);
extern int guestfs_set_e2uuid (guestfs_h *handle, const char *device, const char *uuid);
extern int guestfs_fsck (guestfs_h *handle, const char *fstype, const char *device);
extern int guestfs_zero (guestfs_h *handle, const char *device);
extern int guestfs_grub_install (guestfs_h *handle, const char *root, const char *device);
extern int guestfs_cp (guestfs_h *handle, const char *src, const char *dest);
extern int guestfs_cp_a (guestfs_h *handle, const char *src, const char *dest);
extern int guestfs_mv (guestfs_h *handle, const char *src, const char *dest);
extern int guestfs_drop_caches (guestfs_h *handle, int whattodrop);
extern int guestfs_ping_daemon (guestfs_h *handle);
extern int guestfs_zerofree (guestfs_h *handle, const char *device);
extern int guestfs_pvresize (guestfs_h *handle, const char *device);
extern int guestfs_sfdisk_N (guestfs_h *handle, const char *device, int n, int cyls, int heads, int sectors, const char *line);
extern int guestfs_vg_activate_all (guestfs_h *handle, int activate);
extern int guestfs_vg_activate (guestfs_h *handle, int activate, char * const* const volgroups);
extern int guestfs_lvresize (guestfs_h *handle, const char *device, int mbytes);
extern int guestfs_resize2fs (guestfs_h *handle, const char *device);
extern int guestfs_e2fsck_f (guestfs_h *handle, const char *device);